syntax = "proto3";
package rofi.messages;

import "common.proto";


message Component {
    enum Type {
        ROFICOM = 0;
        UM_SHOE = 1;
        UM_BODY = 2;
    }

    Type type = 1;
    repeated int32 in_joints = 2;
    repeated int32 out_joints = 3;
}
